@@ -4,6 +4,8 @@
         Improved the efficiency of the search.
         Fixed a couple of minor bugs in the search - note that node.tt
           and supersearch.tt have changed.
+        Change the default indexer for new installs to Plucene.	
+        Only run certain search-related tests if Plucene is installed.
 
 0.43    21 October 2004
         Fix broken navbar changes that crept into last release.
